<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="178dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ig"/>
    <Button
            android:onClick="registerIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/income"/>
    <Button
            android:onClick="registerExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expense"/>
    <Button
            android:onClick="generateReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report"/>
    <Button
            android:onClick="exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"/>
</LinearLayout>