<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="start"
        android:padding="20dp"
        tools:context=".IncomeActivity">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="26dp"
            tools:layout_editor_absoluteX="163dp"
            android:hint="@string/hintAmount"
            android:inputType="number"
            android:id="@+id/txtAmount"
            android:backgroundTint="@android:color/holo_green_dark"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="26dp"
            tools:layout_editor_absoluteX="163dp"
            android:hint="@string/hintDescription"
            android:id="@+id/txtDescription"
            android:backgroundTint="@android:color/holo_green_dark"/>
    <Button
            android:onClick="addIncome"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="130dp"
            tools:layout_editor_absoluteX="149dp"
            android:id="@+id/btnRegister"/>
</LinearLayout>